<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.LoginActivity">

    <include
        android:id="@+id/app_actionbar"
        layout="@layout/app_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_actionbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_width="120dp"
                android:scaleType="fitXY"
                android:layout_height="120dp"
                android:src="@drawable/ic_people_white_48dp"/>

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/round_corner_text"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:alpha="0.54"
                    android:src="@drawable/email_48" />

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="75"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/round_corner_text"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:alpha="0.54"
                    android:src="@drawable/password_48" />

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_string"
                    android:inputType="textPassword"
                    android:maxLength="75"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/registerButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/signup_string"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/signinButton"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/signin_string"
                    android:textColor="@color/primary_text" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
