<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/favouriteLayout"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:paddingLeft="11dp"
    android:paddingRight="11dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:src="@drawable/profile_default"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:gravity="start"
                android:layout_weight="1"
                android:id="@+id/rowNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/dummy_text_fullname"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <LinearLayout
                android:gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/favouriteCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="0"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:layout_marginRight="1dp"
                    android:layout_marginEnd="3dp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:alpha="0.6"
                    android:src="@drawable/ic_star_black_48dp" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/rowEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/dummy_text_email_address"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rowSkillsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/dummy_text"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>

<View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginLeft="72dp"
    android:layout_marginRight="16dp"
    android:background="@color/divider_color" />
</LinearLayout>