<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/signinLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <Button
            android:id="@+id/signinButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signin_string" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/navigationalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/topNavBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/profile_default"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fullnameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_text_fullname"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fullnameEmailText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.75"
                            android:text="@string/dummy_text_email_address"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/dropImageView"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_arrow_drop_down_white_48dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/availableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/shadow" />

                <LinearLayout
                    android:id="@+id/statusDropLayout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/statusImageView"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/ic_arrow_drop_down_black_48dp" />

                    <TextView
                        android:id="@+id/statusDropTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="2dp"
                        android:text="Choose your new status"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:id="@+id/statusListLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/availableTextView"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="0.87"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="Available"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/busyTextView"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="0.87"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="Busy"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/unavailableTextView"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="0.87"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="Unavailable"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_color" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/navListLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/shadow" />

                <LinearLayout
                    android:id="@+id/searchLayoutBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/searchLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/navSearchImageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.54"
                            android:src="@drawable/search_48" />

                        <TextView
                            android:id="@+id/navSearchTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.87"
                            android:text="@string/search_string"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/favouriteLayoutBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/favouriteLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/navFavouritesImageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.54"
                            android:src="@drawable/mark_as_favorite_48" />

                        <TextView
                            android:id="@+id/navFavouritesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.87"
                            android:text="@string/favourites_string"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/jobinboxLayoutBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/jobinboxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/navJobInboxImageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.54"
                            android:src="@drawable/inbox_48" />

                        <TextView
                            android:id="@+id/navJobInboxTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.87"
                            android:text="@string/job_inbox_string"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/joboutboxLayoutBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/joboutboxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/navJobOutboxImageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.54"
                            android:src="@drawable/inbox_48" />

                        <TextView
                            android:id="@+id/navJobOutboxTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.87"
                            android:text="@string/job_outbox_string"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/divider_color" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:id="@+id/signoutLayoutBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/signoutLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/navLogOutImageView"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.54"
                            android:src="@drawable/exit_48" />

                        <TextView
                            android:id="@+id/navLogOutTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.87"
                            android:text="@string/logout_string"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

